tests/toylang/neg/001195_mutation.toylang
program a = { program a = { } . sleep; } .
